--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -1,5 +1,7 @@
 postgres = {
-  url = "jdbc:postgresql://localhost/postgres"
+  url = "jdbc:postgresql://localhost:5432/postgres"
+  user = "login"
+  password = "pass"
   driver = org.postgresql.Driver
   connectionPool = disabled
   keepAliveConnection = true
