Done with 8th Lab Work

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 postgres = {
   url = "jdbc:postgresql://localhost:5432/postgres"
-  user = "login"
+  user = "user"
   password = "pass"
   driver = org.postgresql.Driver
   connectionPool = disabled
